Revert "Reverted dockerfile to Kat's changes"
This reverts commit 5cfe4ee5d4b17dca5c1a8ea9e0c079e8c238c9eb.